@@ -20,64 +20,74 @@ namespace {
     mime::mime_headers read_headers(
         network_connection &the_network_connection
     ) {
-        mime::mime_headers headers;
+        try {
+            mime::mime_headers headers;
 
-        std::string line;
-        the_network_connection >> line;
-
-        while ( !line.empty() ) {
-            std::string header(line);
-
-            line = "";
+            std::string line;
             the_network_connection >> line;
 
-            while (line.substr(0,1) == " " || line.substr(0,1) == "\t") {
-                header += line;
+            while ( !line.empty() ) {
+                std::string header(line);
+
                 line = "";
                 the_network_connection >> line;
+
+                while (line.substr(0,1) == " " || line.substr(0,1) == "\t") {
+                    header += line;
+                    line = "";
+                    the_network_connection >> line;
+                }
+
+                string safe;
+                for ( std::string::const_iterator c = header.begin(); c != header.end(); ++c )
+                    if ( *c > 127 || * c < 0 )
+                        safe += '?';
+                    else
+                        safe += *c;
+
+                headers.parse(safe);
             }
-
-            string safe;
-            for ( std::string::const_iterator c = header.begin(); c != header.end(); ++c )
-                if ( *c > 127 || * c < 0 )
-                    safe += '?';
-                else
-                    safe += *c;
-
-            headers.parse(safe);
+            return headers;
+        } catch ( fostlib::exceptions::exception &e ) {
+            e.info() << "Whilst reading MIME headers" << std::endl;
+            throw;
         }
-        return headers;
     }
 
     std::string read_body(
         network_connection &the_network_connection
     ) {
-        std::string content;
-        std::string line;
+        try {
+            std::string content;
+            std::string line;
 
-        the_network_connection >> line;
-        while (
-            true
-        ) {
-            if (
-                (line.length() > 0) &&
-                (line[0] == '.')
+            the_network_connection >> line;
+            while (
+                true
             ) {
                 if (
-                    (line.length() > 1) &&
-                    (line[1] == '.')
+                    (line.length() > 0) &&
+                    (line[0] == '.')
                 ) {
-                    line = line.substr(1);
+                    if (
+                        (line.length() > 1) &&
+                        (line[1] == '.')
+                    ) {
+                        line = line.substr(1);
+                    } else
+                        break;
                 } else
-                    break;
-            } else
-                content += line+"\n";
+                    content += line+"\n";
 
-            line = "";
-            the_network_connection >> line;
+                line = "";
+                the_network_connection >> line;
+            }
+
+            return content;
+        } catch ( fostlib::exceptions::exception &e ) {
+            e.info() << "Whilst reading message body" << std::endl;
+            throw;
         }
-
-        return content;
     }
 
 
@@ -85,14 +95,19 @@ namespace {
         network_connection &the_network_connection,
         string command
     ) {
-        utf8_string server_response;
-        the_network_connection >> server_response;
+        try {
+            utf8_string server_response;
+            the_network_connection >> server_response;
 
-        if (server_response.underlying().substr(0,3) != "+OK") {
-            throw exceptions::not_implemented(
-                command,
-                coerce< string >(server_response)
-            );
+            if (server_response.underlying().substr(0,3) != "+OK") {
+                throw exceptions::not_implemented(
+                    command,
+                    coerce< string >(server_response)
+                );
+            }
+        } catch ( fostlib::exceptions::exception &e ) {
+            e.info() << "Whilst waiting for +OK..." << std::endl;
+            throw;
         }
     }
 
@@ -101,12 +116,17 @@ namespace {
         const string command,
         const nullable< string > parameter = null
     ) {
-        the_network_connection << coerce< utf8_string >(command);
-        if ( !parameter.isnull() ) {
-            the_network_connection << " ";
-            the_network_connection << coerce< utf8_string >(parameter);
+        try {
+            the_network_connection << coerce< utf8_string >(command);
+            if ( !parameter.isnull() ) {
+                the_network_connection << " ";
+                the_network_connection << coerce< utf8_string >(parameter);
+            }
+            the_network_connection << "\r\n";
+        } catch ( fostlib::exceptions::exception &e ) {
+            e.info() << "Whilst sending command: " << command << std::endl;
+            throw;
         }
-        the_network_connection << "\r\n";
     }
 
     void send(
@@ -159,23 +179,28 @@ namespace {
             size_t message_count;
             pop3cnx( const host &h, const string &username, const string &password )
             : m_cnx( h, 110 ) {
-                utf8_string server_status;
-                m_cnx >> server_status;
+                try {
+                    utf8_string server_status;
+                    m_cnx >> server_status;
 
-                send_and_check_OK(m_cnx, "user", username);
-                send_and_check_OK(m_cnx, "pass", password);
+                    send_and_check_OK(m_cnx, "user", username);
+                    send_and_check_OK(m_cnx, "pass", password);
 
-                send(m_cnx, "stat");
+                    send(m_cnx, "stat");
 
-                utf8_string server_response;
-                m_cnx >> server_response;
+                    utf8_string server_response;
+                    m_cnx >> server_response;
 
-                std::stringstream server_response_stringstream(
-                    server_response.underlying().substr(3)
-                );
-                server_response_stringstream >> message_count;
-                size_t octets;
-                server_response_stringstream >> octets;
+                    std::stringstream server_response_stringstream(
+                        server_response.underlying().substr(3)
+                    );
+                    server_response_stringstream >> message_count;
+                    size_t octets;
+                    server_response_stringstream >> octets;
+                } catch ( fostlib::exceptions::exception &e ) {
+                    e.info() << "Whilst establishing POP3 connection" << std::endl;
+                    throw;
+                }
             }
             ~pop3cnx()
             try {
@@ -184,17 +209,22 @@ namespace {
                 absorbException();
             }
             std::auto_ptr< text_body > message( size_t i ) {
-                send_and_check_OK(m_cnx, "retr", i);
-                mime::mime_headers h = read_headers(m_cnx);
-                utf8_string content;
                 try {
-                    content = read_body(m_cnx);
-                } catch ( fostlib::exceptions::unicode_encoding & ) {
-                    return std::auto_ptr< text_body >();
+                    send_and_check_OK(m_cnx, "retr", i);
+                    mime::mime_headers h = read_headers(m_cnx);
+                    utf8_string content;
+                    try {
+                        content = read_body(m_cnx);
+                    } catch ( fostlib::exceptions::unicode_encoding & ) {
+                        return std::auto_ptr< text_body >();
+                    }
+                    return std::auto_ptr<text_body>(
+                        new text_body( coerce< string >( content ), h, "text/plain" )
+                    );
+                } catch ( fostlib::exceptions::exception &e ) {
+                    e.info() << "Whilst retrieving a message" << std::endl;
+                    throw;
                 }
-                return std::auto_ptr<text_body>(
-                    new text_body( coerce< string >( content ), h, "text/plain" )
-                );
             }
             void remove( size_t i ) {
                 send_and_check_OK(m_cnx, "dele", i);
